chore(tests): remove UseCGroupMemoryLimitForHeap configuration (#1077)
This option had been added to the maven test plugins configuration as a try to
avoid Out Of Memory errors when running the build in a Docker container with
memory limit but it didn't prevent all errors.

Other JVM are forked during the build (directly by the test code for instance)
and without dedicated configuration, they are not aware of cgroup memory limit.
The solution is to set the limit option in the JAVA_TOOL_OPTIONS environment
variable.
See https://docs.oracle.com/javase/8/docs/technotes/guides/troubleshoot/envvars002.html

In addition, the previous maven configuration generated warnings when the build
was run on Windows as cgroup concept does not exist on this OS.

Covers [CI-409](https://bonitasoft.atlassian.net/browse/CI-409)