@@ -596,7 +596,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration combine.children="append">
-                    <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
+                    <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -607,14 +607,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration combine.children="append">
-                    <!-- for JVM to know memory limits when running inside docker: -->
-                    <argLine combine.self="append">-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -958,8 +950,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration combine.children="append">
-                            <!-- for JVM to know memory limits when running inside docker: -->
-                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
+                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError</argLine>
                             <systemPropertyVariables>
                                 <sysprop.bonita.db.vendor>postgres</sysprop.bonita.db.vendor>
                                 <sysprop.bonita.bdm.db.vendor>postgres</sysprop.bonita.bdm.db.vendor>
@@ -1016,8 +1007,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration combine.children="append">
-                            <!-- for JVM to know memory limits when running inside docker: -->
-                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
+                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError</argLine>
                             <systemPropertyVariables>
                                 <sysprop.bonita.db.vendor>mysql</sysprop.bonita.db.vendor>
                                 <sysprop.bonita.bdm.db.vendor>mysql</sysprop.bonita.bdm.db.vendor>
@@ -1079,8 +1069,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration combine.children="append">
-                            <!-- for JVM to know memory limits when running inside docker: -->
-                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap</argLine>
+                            <argLine combine.self="append">-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError</argLine>
                             <systemPropertyVariables>
                                 <sysprop.bonita.db.vendor>oracle</sysprop.bonita.db.vendor>
                                 <sysprop.bonita.bdm.db.vendor>oracle</sysprop.bonita.bdm.db.vendor>
